Fix spacing in landscape single-image theme

--- a/source/_assets/sass/_themes.scss
+++ b/source/_assets/sass/_themes.scss
@@ -144,7 +144,14 @@ section.theme-1-landscape {
 		width: 100%;
 	}
 
+	// TODO: Rethink spacing?
+	.image {
+		margin-top: 30px;
+		width: 100%;
+	}
+
 	@media #{$mq-small} {
+
 		.wrapper {
 			flex-wrap: nowrap;
 		}
